# goldenmatch

./: .context-network.md  .dockerignore  .editorconfig  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  AUDIT_OPEN_ISSUES_2026-07-12.md  AUDIT_SESSION_SUMMARY_2026-07-12.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_SCANNING_TRIAGE_2026-07-12.md  CONTRIBUTING.md  DEPENDABOT_BREAKDOWN_2026-07-12.md  DEPENDABOT_BREAKING_CHANGE_RISK.md  DEPENDABOT_SAFE_UPDATES_EXECUTION.md  DEPENDABOT_UPDATE_FEASIBILITY.md  Dockerfile.embprov  Dockerfile.qis  GITHUB_ISSUES_CLOSURE_REPORT_2026-07-12.md  README.md  SECURITY.md  SECURITY_AUDIT_2026-07-12.md  STALE_ISSUES_CLOSURE_CHECKLIST.md  TEST_AND_MERGE_INSTRUCTIONS.md  evidence.json  justfile  llms.txt  npm-downloads.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pypi-downloads.json  pyproject.toml  pyrightconfig.json  receipt.json  report.md  sgconfig.yml  (+3 more)
.ast-grep/: README.md
.ast-grep/rule-tests/: no-bare-relative-test-fixture-path-test.yml  no-clirunner-mix-stderr-test.yml  no-toplevel-import-torch-test.yml  polars-no-deprecated-apply-test.yml  polars-read-excel-needs-engine-test.yml  py-no-eval-test.yml  py-no-exec-test.yml  py-no-subprocess-shell-true-test.yml  rust-no-dbg-macro-test.yml  rust-no-todo-unimplemented-test.yml  ts-no-empty-catch-test.yml  ts-no-spread-math-min-max-test.yml
.ast-grep/rules/: no-bare-relative-test-fixture-path.yml  no-clirunner-mix-stderr.yml  no-toplevel-import-torch.yml  polars-no-deprecated-apply.yml  polars-read-excel-needs-engine.yml  py-no-eval.yml  py-no-exec.yml  py-no-subprocess-shell-true.yml  rust-no-dbg-macro.yml  rust-no-todo-unimplemented.yml  ts-no-empty-catch.yml  ts-no-spread-math-min-max.yml
.claude/: doc-surfaces.md
.claude/hooks/: session-start.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  filters.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/benchmarks/: README.md  registry.yml
.github/workflows/: _publish-js.yml  _publish-pypi.yml  arrow-finish-line-sweep.yml  ast-grep.yml  bench-abbrevalign.yml  bench-analysis-native.yml  bench-build-clusters-arrow-spike.yml  bench-cluster-frames-out.yml  bench-columnar-cluster-build.yml  bench-columnar-drop-pairscores.yml  bench-corpus-dedup.yml  bench-datafusion-spine-spill.yml  bench-datafusion-vs-bucket.yml  bench-df-cluster-edges.yml  bench-distributed-stack.yml  bench-embedding-providers.yml  bench-er-headtohead.yml  bench-er-kg.yml  bench-fs-distributed.yml  bench-fs-out-of-core.yml  bench-fs-stages.yml  bench-golden-fused-memcap.yml  bench-goldenembed.yml  bench-goldenflow-fused.yml  bench-graphiti-smoke.yml  bench-graphrag-qa.yml  bench-identity-fingerprint.yml  bench-identity-resolve-scaling.yml  bench-inhouse-embedder.yml  bench-issue-688.yml  bench-lightrag-smoke.yml  bench-lsh-recall.yml  bench-match-fused-memcap.yml  bench-match-fused.yml  bench-metrics.yml  bench-msgraphrag-smoke.yml  bench-native-bucket.yml  bench-native-bulk-fingerprint.yml  bench-native-cluster-kernel.yml  bench-pair-stream-columnar.yml  (+82 more)
.goldenmatch/: memory.db
.profile_tmp/: baseline_febrl3_ncvr.py
.ray/: cluster-gce.yaml
.vendor/: goldencheck-types-0.1.0.tgz  goldenmatch-2.0.0.tgz
context-network/: discovery.md
context-network/architecture/: datafusion-spine.md  distributed-wcc.md  fellegi-sunter-splink-parity.md  goldencheck-goldenmatch-integration.md  goldencheck-native-kernel.md  goldenflow-native-kernel.md  rust-test-coverage.md  sail-tier.md  single-kernel-collapse-R1-plan.md  single-kernel-collapse-inventory.md  single-kernel-collapse-roadmap.md  sql-native-extensions.md  wasm-acceleration.md
context-network/decisions/: 0001-gate-reframe-engine-portability.md  0002-scale-mode-contract.md  0003-stage-e-spill-honest-null.md  0004-sail-tier-scope.md  0005-sql-native-direct-udfs.md  0006-goldenflow-native-nanp-gating.md  0007-goldencheck-goldenmatch-integration.md  0008-fellegi-sunter-splink-parity.md  0009-rust-test-coverage.md  0010-publish-containers-ghcr-mirror.md  0011-distributed-wcc-randomized-contraction.md  0012-fs-block-scoring-perf.md  0013-goldencheck-ts-parity-hardening.md  0014-opt-in-wasm-acceleration.md  0017-dbt-parity-program.md  (+32 more)
docs/: .docs-sweep.json  agent-codemap.json  agent-manifest.json  benchmark-claims.json  ci-lanes.md  columnar-pipeline-roadmap.md  columnar-pipeline-wiring.md  distributed-ray-cluster-setup.md  distributed-ray-roadmap.md  distributed-sail-cluster-setup.md  duckdb-sql-scoring-research.md  er-vendor-comparison.md  explicit-config.md  future-work.md  org-transfer-2026-05-15.md  oss-llm-usage.md  quality-invariant-scale.md  reproducing-benchmarks.md  scale-audit-2026-05.md  scale-envelope.md  versioning-policy.md
docs-site/: README.md  docs.json  for-researchers.mdx  index.mdx  quickstart.mdx  suite-matrix.mdx  web-ui.mdx
examples/: README.md
parity/: goldenanalysis.yaml  goldencheck.yaml  goldenflow.yaml  goldenmatch.yaml  goldenpipe.yaml  infermap.yaml
scripts/: _pin_actions.py  agent_codemap.py  audit_goldenmatch_polars_ops.py  bench.py  bench_1m_zero_config.py  bench_autoconfig_sample_quality.py  bench_date_comparators.py  bench_embedding_providers.py  bench_fs_out_of_core_scale.py  bench_fs_out_of_core_summary.py  bench_fs_peak_probe.py  bench_fs_streaming_prototype.py  bench_fs_vmrss_probe.py  bench_inhouse_embedder.py  bench_issue_688.py  bench_kernel_levenshtein.py  bench_lsh_recall.py  bench_lsh_recall_qqp.py  bench_native_bloom.py  bench_native_bucket.py  bench_native_bulk_fingerprint.py  bench_native_cluster_kernel.py  bench_native_kernels.py  bench_planning_effort.py  bench_quality_bridges.py  bench_simhash_recall.py  build_analysis_native.py  build_goldencheck_native.py  build_goldengraph_native.py  build_infermap_native.py  build_native.py  check_api_parity.py  check_benchmark_claims.py  check_coverage_floors.py  check_dead_code.py  check_docs_consistency.py  check_docs_links.py  check_docs_sections.py  check_docs_staleness.py  check_docs_sweep.py  (+54 more)
tests/: CLAUDE.md
(+892 files in other folders)
