[project]
name = "goldenmatch-monorepo"
version = "0.0.0"
description = "Golden Suite monorepo"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/python/*"]

[tool.uv.sources]
goldenmatch = { workspace = true }
goldencheck = { workspace = true }
goldenflow = { workspace = true }
goldenpipe = { workspace = true }
infermap = { workspace = true }
goldensuite-mcp = { workspace = true }
goldencheck-types = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist>=3.6",
    "pytest-asyncio>=0.23",  # required by goldenmatch + goldenflow async tests
    "pytest-timeout>=2.3",  # surfaces hung tests in CI as failures w/ stack traces (vs job timeout)
    "pytest-cov>=5.0",  # required by ci.yml's "Coverage floors" step on the goldenmatch matrix entry
    "ruff>=0.6",
    "pyright>=1.1.380",  # strict typing on goldenmatch core slice (see pyrightconfig.json)
    # transitive test deps surfaced across workspace packages:
    "httpx>=0.27",  # required by starlette.testclient (used by goldenpipe tests)
]

# NOTE: pytest-xdist (-n auto) is passed from CI rather than set as a global
# addopts, because individual packages (e.g. goldensuite-mcp) define their own
# optional [dev] extras that don't include xdist, and pytest invoked under
# those package envs would fail with "unrecognized arguments: -n".
