[project]
name = "goldenmatch-monorepo"
version = "0.0.0"
description = "Golden Suite monorepo"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/python/*"]

[tool.uv.sources]
goldenmatch = { workspace = true }
goldencheck = { workspace = true }
goldenflow = { workspace = true }
goldenpipe = { workspace = true }
infermap = { workspace = true }
goldensuite-mcp = { workspace = true }
goldencheck-types = { workspace = true }
goldenanalysis = { workspace = true }
# goldenmatch-native is the optional compiled runtime (goldenmatch[native]).
# It's NOT a workspace member (it's a maturin/Rust crate under packages/rust/),
# so point uv at the path for dev/CI resolution. uv reads its static PEP 621
# metadata without building unless the `native` extra is actually installed; the
# published goldenmatch wheel resolves goldenmatch-native from PyPI (uv.sources
# is workspace-local, stripped from published Requires-Dist).
goldenmatch-native = { path = "packages/rust/extensions/native" }
# goldencheck-native is the optional compiled runtime (goldencheck[native]) --
# same maturin/Rust split as goldenmatch-native above. Point uv at the path for
# dev/CI resolution; the published goldencheck wheel resolves it from PyPI.
goldencheck-native = { path = "packages/rust/extensions/goldencheck-native" }
# Same pattern for goldenflow's optional compiled runtime (goldenflow[native]).
goldenflow-native = { path = "packages/rust/extensions/native-flow" }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist>=3.6",
    "pytest-asyncio>=0.23",  # required by goldenmatch + goldenflow async tests
    "pytest-timeout>=2.3",  # surfaces hung tests in CI as failures w/ stack traces (vs job timeout)
    "pytest-cov>=5.0",  # required by ci.yml's "Coverage floors" step on the goldenmatch matrix entry
    "ruff>=0.6",
    "pyright>=1.1.380",  # strict typing on goldenmatch core slice (see pyrightconfig.json)
    "hypothesis>=6.0",  # property-based tests (test_property_invariants.py + test_autoconfig_properties.py); OpenSSF Scorecard Fuzzing check
    # transitive test deps surfaced across workspace packages:
    "httpx>=0.27",  # required by starlette.testclient (used by goldenpipe tests)
]

# NOTE: pytest-xdist (-n auto) is passed from CI rather than set as a global
# addopts, because individual packages (e.g. goldensuite-mcp) define their own
# optional [dev] extras that don't include xdist, and pytest invoked under
# those package envs would fail with "unrecognized arguments: -n".

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F", "I", "B", "UP"]
ignore = [
    # B007: unused-loop-control-variable — 76 sites of mechanical _ rename noise
    "B007",
    # B008: function-call-in-default-argument — FastAPI/Pydantic Depends()/Field() are legitimate patterns
    "B008",
    # B017: assert-raises-exception — test patterns, not production bugs
    "B017",
    # B023: function-uses-loop-variable — single intentional closure binding
    "B023",
    # B904: raise-without-from-inside-except — 110 sites; revisit as a focused PR
    "B904",
    # B905: zip-without-explicit-strict — 54 sites need per-call strict=True/False decisions
    "B905",
]
